[package]
name = "amp-common"
description = "Rust libraries shared across Amphitheatre components and libraries"
version = "0.11.1"
edition = "2021"
license = "Apache-2.0"
homepage = "https://amphitheatre.app"
repository = "https://github.com/amphitheatre-app/common"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.11"
confy = "2.0"
convert_case = "0.11"
data-encoding = "2.10"
dirs = "6.0"
jiff = "0.2"
json_comments = "0.2"
k8s-openapi = { version = "0.27", default-features = false, features = ["schemars", "latest"] }
kube = { version = "3.0", default-features = false, features = ["client", "runtime", "derive", "rustls-tls"] }
notify = "8.2"
oci-distribution = { version = "0.11", default-features = false, features = ["rustls-tls", "test-registry"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "query"] }
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
toml = "1.0"
tracing = "0.1"
url = "2.5"
utoipa = { version = "5.4", features = ["axum_extras", "uuid", "chrono", "macros"] }
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
assert_matches = "1.5"
mockito = "1.7"
